css/style.scss
@font-face {
    font-family: 'Aleo';
    src: url('/assets/fonts/aleo-regular-webfont.woff');
}

$brand_primary: #db1d0f;

$font_family_serif: 
    Aleo, Georgia, "Times New Roman", Times, serif;
$font_family_sans_serif: 
    "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; 
$font_family_base: Cardo, $font_family_serif;

@import '../bower_components/bootstrap/scss/bootstrap.scss';

// Light text on a dark background.
@mixin light-text() {
    color: #fff;
    &:hover {
        color: $gray-lighter;
    } 
}
// Class for when it doesn't make sense to use the mixin.
.light-text {
    @include light-text();
}

html, body {
    // I'm not sure why this is required, but without it, I get an empty
    // space on the right of the page when the viewport is < 600px.
    overflow-x: hidden;
}

header {
    background-color: $brand_primary;

    .site-title {
        text-align: center;
        padding-top: 40px;
        padding-bottom: 40px;
        margin: 0;
        font-weight: normal;

        a {
            @include light-text();
            font-family: $font_family_serif;
            text-decoration: none;
        }
    }

    .site-subtitle {
        font-family: $font_family_sans_serif;
        color: #fff;
        text-align: center;
        margin: 0;
        padding-bottom: 60px;
    }

    /* The padding on the .skyline-inner element is critical:
     * https://www.smashingmagazine.com/2013/07/simple-responsive-images-with-css-background-images/
     */
    .skyline {
        width: 100%;
        background-size: 100%;
        background-image: url(/assets/images/skyline/600x158.png);
        background-repeat: no-repeat;
    }

    .skyline-inner {
        height: 0;
        padding-top: percentage(158/600);
    }
}


$article-padding-x: 5%;
$article-padding-top: 50px;

nav {
    background-color: $gray-lighter;
    text-transform: uppercase;
    font-family: $font_family_sans_serif;
    &.navbar {
        padding-left: $article-padding-x;
    }
    a:hover {
        text-decoration: none;
    }
}

article {
    padding-top: $article-padding-top;
    padding-left: $article-padding-x;
    padding-right: $article-padding-x;
    .title {
        color: $brand_primary;
        font-size: 2em;
    }
    img {
        max-width: 100%;
        @include center-block();
    }
}

.twitter-container {
    display: none;    
    height: 0;
    width: 0;
}

footer {
    background-color: $brand_primary;
    text-align: center;
    color: #fff;
    padding: 80px;

    .contact-me {
        padding-bottom: 30px;
    }

    .contact-link {
        @include light-text();
        font-size: 3em;
        padding-left: 30px;
        &:first-child {
            padding-left: 0;
        }
    }
}

@include media-breakpoint-up(md) {
    header {
        .skyline {
            background-image: url(/assets/images/skyline/1920x279.png)
        }

        .skyline-inner {
            padding-top: percentage(279/1920);
        }

        .site-title {
            font-size: 3.5em;
        }

        .site-title, .site-subtitle {
            padding: 0 0 30px 0;
        }
    }

    nav {
        li {
            padding-left: 30px;
            display: inline;
            &:first-child {
                padding-left: 0;
            }
        }

        &.navbar {
            padding-left: 15%; 
        }

        .fa-external-link {
            padding-left: 5px;
        }
    }

    // Show a Twitter timeline on the right-hand side of the page on medium
    // screens and larger.
    article.article { 
        padding-left: 15%;
    }
    main { 
        @include clearfix(); 
    }
    .twitter-container {
        @include center-block();
        height: 600px;
        width: 300px;
        padding-top: $article-padding-top; 
    }
}

